#16 замена new Integer(***) на Integer.valueOf(***)